--- a/css/styles.css
+++ b/css/styles.css
@@ -526,13 +526,14 @@ h1 {
     border-radius: 4px;
     padding-block: 8px;
     padding-inline: 24px;
-    width: 165px;
+    min-width: 165px;
     height: 40px;
+    cursor: pointer;
+    border: none;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    gap: 16px;
     background-color: #4D5AE5;
 }
 
@@ -542,6 +543,7 @@ h1 {
 }
 
 .subscribe-icon {
+    margin-left: 16px;
     fill: #FFFFFF;
 }
 
@@ -585,10 +587,13 @@ h1 {
 }
 
 .modal-close-btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 100%;
+    border-radius: 50%;
     background-color: #E7E9FC;
     border: 1px solid rgba(0, 0, 0, 0.1);
     margin-bottom: 24px;
@@ -626,13 +631,17 @@ h1 {
     text-align: center;
     color: #2E2F42;
     padding-left: 14px;
+    margin-bottom: 16px;
 }
 
 .modal-input {
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
-    width: 360px;
+    width: 100%;
     height: 40px;
+    background-color: transparent;
+    padding-left: 38px;
+    outline: transparent;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -641,7 +650,7 @@ h1 {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: 8px;
+    margin-bottom: 8px;
     margin-left: 14px;
     padding: 72px 24px 24px 24px;
 }
@@ -665,8 +674,8 @@ h1 {
     border: 1px solid #4D5AE5;
 }
 
-.input-wrapper svg:hover,
-.input-wrapper svg:focus {
+.modal-input svg:hover,
+.modal-input svg:focus {
     fill: #4D5AE5;
 }
 
@@ -674,7 +683,7 @@ h1 {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8E8F99;
     margin-bottom: 4px;
@@ -683,25 +692,30 @@ h1 {
 .comment-area {
     display: flex;
     justify-content: flex-start;
-    padding-left: 16px;
-    padding-top: 8px;
+    padding: 8px 16px;
     resize: none;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: rgba(46, 47, 66, 0.4);
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
-    width: 360px;
+    width: 100%;
     height: 120px;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .comment-area:hover,
 .comment-area:focus {
     border: 1px solid #4D5AE5;
+}
+
+.checkbox {
+    margin-bottom: 24px;
 }
 
 .custom-checkbox {
@@ -716,11 +730,11 @@ h1 {
     border: 1px solid rgba(46, 47, 66, 0.4);
     background-color: transparent;
     fill: transparent;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 
 .policy-checkbox:checked + .policy-label >.custom-checkbox {
-    border: 1px solid #404BBF;
+    border: none;
     background-color: #404BBF;
     fill: #F4F4FD;
 }
@@ -729,13 +743,13 @@ h1 {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8E8F99;
 }
 
 .policy-label .policy-link {
-    line-height: 1.33333;
+    line-height: 1.33;
     text-decoration: underline;
     text-decoration-skip-ink: none;
     color: #4D5AE5;
@@ -748,7 +762,8 @@ h1 {
     border: none;
     border-radius: 4px;
     height: 56px;
-    font-family: inherit;
+    font-family: "Roboto",
+    sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
