--- a/css/styles.css
+++ b/css/styles.css
@@ -580,6 +580,7 @@ h1 {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    padding: 72px 24px 24px 24px;
 }
 
 .backdrop:not(.is-open).modal {
@@ -611,15 +612,17 @@ h1 {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.close-icon:hover,
-.close-icon:focus {
-    fill: #FFFFFF;
-}
-
 .modal-close-btn:hover,
-.modal-close-btn:focus {
+.modal-close-btn:focus
+.modal-close-btn:hover svg,
+.modal-close-btn:focus svg {
     background-color: #404BBF;
     border: none;
+}
+
+.modal-close-btn:hover svg,
+.modal-close-btn:focus svg {
+    fill: #FFFFFF;
 }
 
 .modal-title {
@@ -642,7 +645,7 @@ h1 {
     background-color: transparent;
     padding-left: 38px;
     outline: transparent;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-field {
@@ -650,9 +653,9 @@ h1 {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    margin-bottom: 8px;
+    margin-bottom: 16px;
     margin-left: 14px;
-    padding: 72px 24px 24px 24px;
+
 }
 
 .input-wrapper {
@@ -671,11 +674,11 @@ h1 {
 
 .modal-input:hover,
 .modal-input:focus {
-    border: 1px solid #4D5AE5;
+    border-color: #4D5AE5;
 }
 
-.modal-input svg:hover,
-.modal-input svg:focus {
+.modal-input:hover .form-icon,
+.modal-input:focus .form-icon {
     fill: #4D5AE5;
 }
 
